# ServerMonitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  notes.md  requirements.md  task_plan.md
.claude/: settings.local.json
.claude/agents/: deploy-raspberrypi.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
backend/: Cargo.toml  Dockerfile  PERFORMANCE_REPORT.md  analyze_bottlenecks.py  config.example.yaml  config.yaml  mock_server.py  performance_profile.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py  websocket.py
backend/app/collectors/: base.py  docker.py  linux.py  mock.py  qbittorrent.py  unas.py  unifi.py
backend/app/models/: metrics.py
backend/app/services/: collector_manager.py  metrics_store.py
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: routes.rs  websocket.rs
backend/src/collectors/: docker.rs  linux.rs  mock.rs  mod.rs  qbittorrent.rs  ssh_connection.rs  unas.rs  unifi.rs
backend/src/config/: app_config.rs  mod.rs  settings.rs  system_configs.rs
backend/src/models/: messages.rs  metrics.rs  mod.rs  status.rs  system_metrics.rs
backend/src/services/: collector_manager.rs  metrics_store.rs  mod.rs
backend/tests/: test_unifi_collector.py  test_unifi_config.py
docs/plans/: 2026-02-22-pwa-design.md  2026-02-22-pwa.md  2026-02-22-unifi-api-v1-migration-design.md  2026-02-22-unifi-api-v1-migration.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+26 files in other folders)
